--- a/ToDoList - Modulo 1/index.html
+++ b/ToDoList - Modulo 1/index.html
@@ -23,6 +23,9 @@
   </div>
 
   <script src="js/bower_components/angular/angular.min.js"></script>
-  <script src="js/app.js"></script>
+
+<script src="js/app.js"></script>
+  <script src="js/services/toDoService.js"></script>
+
 </body>
 </html>
