--- a/Modulo 1/www/index.html
+++ b/Modulo 1/www/index.html
@@ -9,7 +9,7 @@
     <script src="js/app.js"></script>
 </head>
 <body ng-app="MinhasTarefas">
-    <div class="container" ng-controller="TarefasController as c">
+    <div class="container" ng-controller="TarefasController as c" ng-init="ocultar = true">
         <h1>Minhas Tarefas</h1>
 
         <form ng-submit="c.incluir()">
