--- a/Modulo 1/www/index.html
+++ b/Modulo 1/www/index.html
@@ -1,35 +1,44 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR" ng-app="MinhasTarefas">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1, user-scalable=no">
     <title>Minhas Tarefas</title>
+    <link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/style.css">
     <script src="js/bower_components/angular/angular.min.js"></script>
-    <script src="js/app.js"></script>
 </head>
-<body ng-app="MinhasTarefas">
-    <div class="container" ng-controller="TarefasController as c" ng-init="ocultar = true">
+<body>
+    <div class="container" ng-controller="TarefasController as c" ng-init="ocultar=true">
         <h1>Minhas Tarefas</h1>
 
-        <form ng-submit="c.incluir()">
-            <input type="text" placeholder="Insira uma tarefa..." ng-model="c.tarefa" />
+        <form name="formTarefas" ng-submit="formTarefas.$valid && c.incluir()" novalidate>
+            <input type="text" required placeholder="Insira uma tarefa..." ng-model="c.tarefa" id="nome_tarefa" />
             <input type="submit" value="Criar"/>
         </form>
 
         <div class="tarefas-pendentes">
-            <h3>Pendentes ({{c.totalPendentes()}})</h3>
+            <h3>Pendentes ({{c.totalTarefas(false)}})</h3>
             <ul>
-                <li ng-repeat="tarefa in c.tarefas | filter: { completa: false } track by $index"><input type="checkbox" ng-change="c.salvar()" ng-model="tarefa.completa" /> {{tarefa.texto}}</li>
+                <li ng-repeat="tarefa in c.tarefas | filter: { Completa: false } track by $index">
+                    <input type="checkbox" ng-change="c.salvar()" ng-model="tarefa.Completa" />
+                    {{tarefa.Texto}}
+                    <a href="#" class="excluir" ng-click="c.excluir(tarefa)">x</a>
+                </li>
             </ul>
         </div>
 
         <div class="tarefas-completas">
-            <h3>Completas ({{c.totalCompletas()}})<a href="#" ng-click="ocultar = !ocultar">ocultar</a></h3>
+            <h3>Completas ({{c.totalTarefas(true)}})<a href="#" ng-click="ocultar=!ocultar">{{(ocultar) ? "exibir" : "ocultar"}}</a></h3>
             <ul ng-hide="ocultar">
-                <li ng-repeat="tarefa in c.tarefas | filter: { completa: true } track by $index"><input type="checkbox" ng-change="c.salvar()" ng-model="tarefa.completa" /> {{tarefa.texto}}</li>
+                <li ng-repeat="tarefa in c.tarefas | filter: { Completa: true } track by $index">
+                    <input type="checkbox" ng-change="c.salvar()" ng-model="tarefa.Completa" />
+                    {{tarefa.Texto}}
+                    <a href="#" class="excluir" ng-click="c.excluir(tarefa)">x</a>
+                <li>
             </ul>
         </div>
     </div>
+    <script src="js/app.js"></script>
 </body>
 </html>
